# youtube-api-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg.json
Engine/Core/: CMakeLists.txt  CoreDocs.md
Engine/Core/Include/: Rice.h
Engine/Core/Include/Event/: ApplicationEvent.h  Event.h  KeyCode.h  KeyEvent.h  MouseCode.h  MouseEvent.h
Engine/Core/Include/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Core/Include/Rice/: Application.h  Core.h  Debug.h  EntryPoint.h  Layer.h  LayerStack.h  PreCompiledHeaders.h  Time.h  Window.h
Engine/Core/Source/: Application.cpp  Debug.cpp  Layer.cpp  LayerStack.cpp  Time.cpp
Engine/Input/: CMakeLists.txt  Input.h
Engine/Platform/: CMakeLists.txt
Engine/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
Engine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  OrthCamera.cpp  OrthCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Sandbox/: CMakeLists.txt
Sandbox/Assets/: SandboxCube.cpp  SandboxCube.h  placeholder.txt
Sandbox/Source/: RainbowCube.cpp  RainbowCube.h  SandboxApp.cpp
docs/lectures/: C++ review.md  camera.md  lectures.md
docs/requirements/: PRD.md
docs/requirements/lectures/: C++ review.md
